--- a/.cproject
+++ b/.cproject
@@ -276,15 +276,18 @@
 								<option id="org.eclipse.cdt.cross.arm.gnu.c.compiler.option.optimization.functionsections.373481970" name="Function sections (-ffunction-sections)" superClass="org.eclipse.cdt.cross.arm.gnu.c.compiler.option.optimization.functionsections" value="true" valueType="boolean"/>
 								<option id="org.eclipse.cdt.cross.arm.gnu.c.compiler.option.optimization.datasections.671894514" name="Data sections (-fdata-sections)" superClass="org.eclipse.cdt.cross.arm.gnu.c.compiler.option.optimization.datasections" value="true" valueType="boolean"/>
 								<option id="org.eclipse.cdt.cross.arm.gnu.c.compiler.option.preprocessor.def.1222717843" name="Defined symbols (-D)" superClass="org.eclipse.cdt.cross.arm.gnu.c.compiler.option.preprocessor.def" valueType="definedSymbols">
-									<listOptionValue builtIn="false" value="GUID=&quot;00000081&quot;"/>
+									<listOptionValue builtIn="false" value="GUID=&quot;00000087&quot;"/>
+									<listOptionValue builtIn="false" value="SHARP_DISPLAY=TRUE"/>
 									<listOptionValue builtIn="false" value="RS485=TRUE"/>
 									<listOptionValue builtIn="false" value="CHE_CONTROLLER"/>
 									<listOptionValue builtIn="false" value="gPromiscuousMode_d=FALSE"/>
-									<listOptionValue builtIn="false" value="HARDWARE_VERSION=1234"/>
-									<listOptionValue builtIn="false" value="FIRMWARE_VERSION=5555"/>
-									<listOptionValue builtIn="false" value="RADIO_PROTOCOL_VERSION=254"/>
+									<listOptionValue builtIn="false" value="HARDWARE_VERSION=&quot;1&quot;"/>
+									<listOptionValue builtIn="false" value="FIRMWARE_VERSION=&quot;2&quot;"/>
+									<listOptionValue builtIn="false" value="RADIO_PROTOCOL_VERSION=2"/>
 								</option>
 								<option id="org.eclipse.cdt.cross.arm.gnu.c.compiler.option.misc.std.1956017948" name="Language Standard" superClass="org.eclipse.cdt.cross.arm.gnu.c.compiler.option.misc.std" value="org.eclipse.cdt.cross.arm.gnu.c.compiler.option.misc.std.gnu99" valueType="enumerated"/>
+								<option id="org.eclipse.cdt.cross.arm.gnu.c.compiler.option.warnings.allwarn.1800025901" name="All warnings (-Wall)" superClass="org.eclipse.cdt.cross.arm.gnu.c.compiler.option.warnings.allwarn" value="true" valueType="boolean"/>
+								<option id="org.eclipse.cdt.cross.arm.gnu.c.compiler.option.other.otherflags.1533779107" name="Other flags" superClass="org.eclipse.cdt.cross.arm.gnu.c.compiler.option.other.otherflags" value="-c -fmessage-length=0 -Wno-comment" valueType="string"/>
 								<inputType id="org.eclipse.cdt.cross.arm.gnu.sourcery.windows.c.compiler.base.input.609424058" name="ARM Ltd Windows GCC C Compiler" superClass="org.eclipse.cdt.cross.arm.gnu.sourcery.windows.c.compiler.base.input"/>
 								<inputType id="org.eclipse.cdt.cross.arm.gnu.c.compiler.input.asmSourcePreproc.393505087" superClass="org.eclipse.cdt.cross.arm.gnu.c.compiler.input.asmSourcePreproc"/>
 							</tool>
