Added binary files to repo

--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,14 @@
 /RAM
 /AisleController
 /SaAnalysispointsManager.apconfig
-/Tuner/
-/CHEController/
-/LEDController/
+/Tuner/*
+!/Tuner/Tuner.elf
+/CHEController/*
+!/CHEController/CHEController.elf
+/LEDController/*
+!/LEDController/LEDController.elf
 /.ProcessorExpert.g_c
 /.ProcessorExpert.g_x
 /ProjectInfo.xml
-/Gateway/
+/Gateway/*
+!/Gateway/Gateway.elf
