Changing binary file placement

--- a/.gitignore
+++ b/.gitignore
@@ -4,14 +4,10 @@
 /RAM
 /AisleController
 /SaAnalysispointsManager.apconfig
-/Tuner/*
-!/Tuner/Tuner.elf
-/CHEController/*
-!/CHEController/CHEController.elf
-/LEDController/*
-!/LEDController/LEDController.elf
+/Tuner
+/CHEController
+/LEDController
 /.ProcessorExpert.g_c
 /.ProcessorExpert.g_x
 /ProjectInfo.xml
-/Gateway/*
-!/Gateway/Gateway.elf
+/Gateway
