Fix the SAP images.

--- a/Released Binaries/SAP Images/CHECon.cfg
+++ b/Released Binaries/SAP Images/CHECon.cfg
@@ -2,11 +2,11 @@
 ; Silicon Manufacturer is Generic
 ; Silicon Architecture is ARM devices
 ;
-; LAST USED CONFIGURATION FILE = C:\Users\jeffw\git\KW2.3.1-test\Released Binaries\SAP Images\CHECon.cfg
+; LAST USED CONFIGURATION FILE = C:\Users\jeffw\workspace\KW2.3.1-test\Released Binaries\SAP Images\CHECon.cfg
 ; LAST USED ALGORITHM FILE = C:\PEMicro\cyclone_arm\supportFiles_ARM\Freescale\KWx\freescale_kw21d256m5_1x32x64k_pflash.arp
-; LAST USED S RECORD FILE = C:\Users\jeffw\git\KW2.3.1-test\Released Binaries\CHEController.elf
+; LAST USED S RECORD FILE = C:\Users\jeffw\workspace\KW2.3.1-test\Released Binaries\CHEController.elf
 ; LAST USED IMAGE FILE = 
-; LAST USED PORT = USB1 : Musca
+; LAST USED PORT = USB1 : MUSCA
 ;
 ; RESET_DELAY 0
 ;
@@ -20,7 +20,7 @@
 :NEWIMAGE
 :DESCRIBEIMAGE CHE v3.1RC1
 CM  C:\PEMicro\cyclone_arm\supportFiles_ARM\Freescale\KWx\freescale_kw21d256m5_1x32x64k_pflash.arp
-SS   C:\Users\jeffw\git\KW2.3.1-test\Released Binaries\CHEController.elf
+SS   C:\Users\jeffw\workspace\KW2.3.1-test\Released Binaries\CHEController.elf
 EN  ;Erase if not Blank
 PM  ;Program Module
 VC  ;Verify Checksum
