--- a/Released Binaries/SAP Images/Tuner.cfg
+++ b/Released Binaries/SAP Images/Tuner.cfg
@@ -2,10 +2,10 @@
 ; Silicon Manufacturer is Generic
 ; Silicon Architecture is ARM devices
 ;
-; LAST USED CONFIGURATION FILE = C:\Users\jeffw\git\KW2.3.1-test\Released Binaries\SAP Images\Tuner.cfg
+; LAST USED CONFIGURATION FILE = C:\Users\jeffw\workspace\KW2.3.1-test\Released Binaries\SAP Images\Tuner.cfg
 ; LAST USED ALGORITHM FILE = C:\PEMicro\cyclone_arm\supportFiles_ARM\Freescale\KWx\freescale_kw21d256m5_1x32x64k_pflash.arp
-; LAST USED S RECORD FILE = C:\Users\jeffw\git\KW2.3.1-test\Released Binaries\Tuner.elf
-; LAST USED IMAGE FILE = C:\Users\jeffw\git\KW2.3.1-test\Released Binaries\SAP Images\Tuner v3.1RC1.SAP
+; LAST USED S RECORD FILE = C:\Users\jeffw\workspace\KW2.3.1-test\Released Binaries\Tuner.elf
+; LAST USED IMAGE FILE = C:\Users\jeffw\workspace\KW2.3.1-test\Released Binaries\SAP Images\Tuner.SAP
 ; LAST USED PORT = 
 ;
 ; RESET_DELAY 0
@@ -20,7 +20,7 @@
 :NEWIMAGE
 :DESCRIBEIMAGE Tuner v3.1RC1
 CM  C:\PEMicro\cyclone_arm\supportFiles_ARM\Freescale\KWx\freescale_kw21d256m5_1x32x64k_pflash.arp
-SS   C:\Users\jeffw\git\KW2.3.1-test\Released Binaries\Tuner.elf
+SS   C:\Users\jeffw\workspace\KW2.3.1-test\Released Binaries\Tuner.elf
 EN  ;Erase if not Blank
 PM  ;Program Module
 VC  ;Verify Checksum
